Fix form fields overflowing screen

--- a/sources/stylesheets/_content-formatted.scss
+++ b/sources/stylesheets/_content-formatted.scss
@@ -124,11 +124,13 @@
   }
 
   .form_field_size_medium {
-    width: 416px;
+    max-width: 416px;
+    width: 100%;
   }
 
   .form_field_size_large {
-    width: 576px;
+    max-width: 576px;
+    width: 100%;
   }
 
   .form_submit {
@@ -271,7 +273,7 @@
   .content-formatted {
     .form_field_size_medium,
     .form_field_size_large {
-      width: 100%;
+      max-width: 100%;
     }
   }
 }
