--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -1813,10 +1813,12 @@ h4 {
   min-height: 96px;
 }
 .content-formatted .form_field_size_medium {
-  width: 416px;
+  max-width: 416px;
+  width: 100%;
 }
 .content-formatted .form_field_size_large {
-  width: 576px;
+  max-width: 576px;
+  width: 100%;
 }
 .content-formatted .form_submit {
   margin-top: 8px;
@@ -1921,7 +1923,7 @@ h4 {
 @media screen and (max-width: 640px) {
   .content-formatted .form_field_size_medium,
   .content-formatted .form_field_size_large {
-    width: 100%;
+    max-width: 100%;
   }
 }
 @font-face {
